Fixed & revamped dark mode, changed obombercare icon, fixed warnings

--- a/src/Components/Intel/Intel.css
+++ b/src/Components/Intel/Intel.css
@@ -1,4 +1,4 @@
-.infoBox{
+.infoBox {
   position: absolute;
   width: 100%;
   height:70px;
@@ -7,35 +7,33 @@
   margin-right: auto;
   margin-left: auto;
   box-shadow: 0 0.15em 0.35em 0 rgba(0,0,0,0.135);
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid var(--background-color);
   display:flex;
   align-items: center;
   justify-content: center;
-  background-color: #c4121e;
-  color:#fff;
+  background-color: var(--cta-color);
+  color: var(--bright-font-color);
 }
 
-@media (prefers-color-scheme: dark){
-  .infoBox{
-    border-bottom: 0px solid #ccc;
-    border-left: 0px solid #ccc;
-    border-right: 0px solid #ccc;
-  }
-}
-
-.infoBoxText strong{
+.infoBoxText strong {
   padding-left: 5px;
   padding-right: 5px;
 }
 
-.infoBoxText{
+.infoBoxText {
   width: 100%;
   display:flex;
   justify-content: center;
   align-items: center;
 
 }
-.infoBox .infoBoxText img{
+
+.infoBox .infoBoxText img {
   width: 25px;
   height: 25px;
+}
+
+.infoBoxText a {
+  font-weight: bold;
+  color: var(--bright-font-color);
 }
