--- a/src/Views/MustWatch.css
+++ b/src/Views/MustWatch.css
@@ -1,13 +1,13 @@
 .slick-prev:before, .slick-next:before {
-    color:red !important;
+    color: var(--header-color);
 }
 
 .slick-dots li button:before {
-  color: red;
+  color: var(--header-color);
 }
 
 .slick-dots li.slick-active button:before{
-  color: red;
+  color: var(--header-color);
 }
 
 .NewBroVideos{
