--- a/src/Views/Terminology.css
+++ b/src/Views/Terminology.css
@@ -1,11 +1,3 @@
-@media (prefers-color-scheme: dark) {
-  .terminologyContainer{
-    border-bottom:1px solid #c7151f;
-    border-left:1px solid #c7151f;
-    border-right:1px solid #c7151f;
-  }
-}
-
 .terminologyHeader{
   text-align: left;
   margin-bottom: .2rem;
